RAP-93 Integrate jib-maven-plugin