@@ -18,6 +18,12 @@
     <properties>
         <skip.integration.tests>true</skip.integration.tests>
         <packageName>rvf-api</packageName>
+        <docker.registry>docker.io</docker.registry>
+        <docker.allowInsecureRegistries>false</docker.allowInsecureRegistries>
+        <docker.image.prefix>snomedinternational</docker.image.prefix>
+        <docker.image.tag>latest</docker.image.tag>
+        <docker.base-image>amazoncorretto:17</docker.base-image>
+        <jib-maven-plugin.version>3.4.0</jib-maven-plugin.version>
     </properties>
 
     <scm>
@@ -270,16 +276,99 @@
                     <skipTests>${skip.integration.tests}</skipTests>
                 </configuration>
             </plugin>
+
+            <!-- Exec Maven Plugin to run Git commands -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.0.0</version>
+                <executions>
+                    <execution>
+                        <id>git-checkout-resources</id>
+                        <phase>generate-resources</phase>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                        <configuration>
+                            <executable>bash</executable>
+                            <arguments>
+                                <argument>checkout-resources.sh</argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
             <!-- Docker Image Build -->
             <plugin>
-                <groupId>com.spotify</groupId>
-                <artifactId>dockerfile-maven-plugin</artifactId>
-                <version>1.4.13</version>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <version>${jib-maven-plugin.version}</version>
                 <configuration>
-                    <repository>${docker.image.prefix}/${project.artifactId}</repository>
-                    <buildArgs>
-                        <JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
-                    </buildArgs>
+                    <container>
+                        <labels>
+                            <author>SNOMED International &lt;tooling@snomed.org&gt;</author>
+                        </labels>
+                        <mainClass>org.ihtsdo.rvf.App</mainClass>
+                        <environment>
+                            <application.title>${project.name}</application.title>
+                            <application.version>${project.version}</application.version>
+                        </environment>
+                        <jvmFlags>
+                            <jvmFlag>-Djava.security.egd=file:/dev/./urandom</jvmFlag>
+                            <jvmFlag>--add-opens=java.base/java.lang=ALL-UNNAMED</jvmFlag>
+                        </jvmFlags>
+                        <ports>
+                            <port>8080</port>
+                        </ports>
+                        <volumes>
+                            <volume>/tmp</volume>
+                        </volumes>
+                        <workingDirectory>/app</workingDirectory>
+                    </container>
+                    <extraDirectories>
+                        <paths>
+                            <path>
+                                <from>${project.basedir}/snomed-drools-rules</from>
+                                <into>/app/snomed-drools-rules</into>
+                            </path>
+                            <path>
+                                <from>${project.basedir}/snomed-release-validation-assertions</from>
+                                <into>/app/snomed-release-validation-assertions</into>
+                            </path>
+                        </paths>
+                        <permissions>
+                            <permission>
+                                <file>/snomed-drools-rules</file>
+                                <mode>757</mode>
+                            </permission>
+                            <permission>
+                                <file>/snomed-release-validation-assertions</file>
+                                <mode>757</mode>
+                            </permission>
+                        </permissions>
+                    </extraDirectories>
+                    <from>
+                        <image>${docker.base-image}</image>
+                        <platforms>
+                            <platform>
+                                <architecture>arm64</architecture>
+                                <os>linux</os>
+                            </platform>
+                            <platform>
+                                <architecture>amd64</architecture>
+                                <os>linux</os>
+                            </platform>
+                        </platforms>
+                    </from>
+                    <to>
+                        <image>${docker.registry}/${docker.image.prefix}/${project.artifactId}</image>
+                        <tags>
+                            <tag>${docker.image.tag}</tag>
+                            <tag>${project.version}</tag>
+                        </tags>
+                    </to>
+                    <allowInsecureRegistries>${docker.allowInsecureRegistries}</allowInsecureRegistries>
                 </configuration>
             </plugin>
 
@@ -339,6 +428,55 @@
         </plugins>
     </build>
 
+    <profiles>
+        <profile>
+            <id>docker-amd64</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.google.cloud.tools</groupId>
+                        <artifactId>jib-maven-plugin</artifactId>
+                        <version>${jib-maven-plugin.version}</version>
+                        <configuration>
+                            <!-- Override the architecture to linux/amd64 -->
+                            <from>
+                                <image>${docker.base-image}</image>
+                                <platforms>
+                                    <platform>
+                                        <architecture>amd64</architecture>
+                                        <os>linux</os>
+                                    </platform>
+                                </platforms>
+                            </from>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>docker-arm64</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.google.cloud.tools</groupId>
+                        <artifactId>jib-maven-plugin</artifactId>
+                        <version>${jib-maven-plugin.version}</version>
+                        <configuration>
+                            <from>
+                                <image>${docker.base-image}</image>
+                                <platforms>
+                                    <platform>
+                                        <architecture>arm64</architecture>
+                                        <os>linux</os>
+                                    </platform>
+                                </platforms>
+                            </from>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
     <repositories>
         <repository>
             <id>ihtsdo-releases</id>
